--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link href="/bootstrap.min.css" rel="stylesheet">
 </head>
 <body>
+    <h1>This is my homepage</h1>
     <script src="./bootstrap.bundle.min.js"></script>
 </body>
 </html>
